--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -4,7 +4,7 @@
 {% if site.safe == false %}
   var disqus_developer = 1;
 {% endif %}
-var disqus_shortname ='{{ croniqueslinux }}';
+var disqus_shortname ='croniqueslinux';
 /* * * DON'T EDIT BELOW THIS LINE * * */
 (function() {
   var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
