--- a/css/main.scss
+++ b/css/main.scss
@@ -3,6 +3,8 @@
 ---
 @charset "utf-8";
 
+
+
 // Our variables
 $base-font-family: 'Open Sans', Helvetica, Arial, sans-serif !important;
 $base-font-size:   16px;
@@ -15,13 +17,13 @@ $text-color:       #111;
 $background-color: #484848;
 $brand-color:      #2a7ae2;
 $brand-top-color:  #2583ad;
-$hover-color:      #6699FF;
+$hover-color:      #DD1144;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
-$code-backgroud-color: #003300;
+$code-backgroud-color: #111;
 $code-font-color:  #00FF33;  
 
 
@@ -42,19 +44,18 @@ $on-laptop:        800px;
 //     }
 // }
 @mixin media-query($device) {
-  @media screen and (max-width: $device) {
-    @content;
-  }
+    @media screen and (max-width: $device) {
+        @content;
+    }
 }
-
-
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
-"base",
-"layout",
-"_syntax-highlighting-native" // "syntax-highlighting"
+        "base",
+        "layout",
+        "_syntax-highlighting-native" // "syntax-highlighting"
 ;
 
 @import url('http://fonts.googleapis.com/css?family=Open+Sans');
 
+@import url('http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css');
