--- a/_includes/Copyright_Notice.html
+++ b/_includes/Copyright_Notice.html
@@ -3,11 +3,11 @@
 
   {% if site.default_locale == "cn" %}
 
-  <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.ca">
+  <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.zh">
     <img src="http://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png">
   </a>
   <br />
-  <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.ca">署名-非商业性使用-相同方式共享</a>
+  <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.zh">署名-非商业性使用-相同方式共享</a>
 
   {% else %}
 
